--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "archiver": "^7.0.1",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "cheerio": "^1.0.0-rc.12",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "ytdl-core": "^4.11.5"
+    "fs": "^0.0.1-security",
+    "jsdom": "^24.1.0",
+    "node-youtube-dl": "^0.0.2",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "twitter-url-direct": "^1.0.9",
+    "ytdl-core": "^4.11.5",
+    "ytpl": "^2.3.0"
   }
 }
