--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-youtube-dl": "^0.0.2",
     "path": "^0.12.7",
     "request": "^2.88.2",
+    "sanitize-filename": "^1.6.3",
     "twitter-url-direct": "^1.0.9",
     "ytdl-core": "^4.11.5",
     "ytpl": "^2.3.0"
